--- a/src/src/components/Message/message.css
+++ b/src/src/components/Message/message.css
@@ -1,8 +1,9 @@
 .root{
     background-color: #fff;
     border: 1px solid #ccc;
-    border-radius: 0.5em;
+    border-radius: 5px;
     padding: 1em;
+    margin: 0.5em;
 }
 
 .text{
@@ -37,7 +38,7 @@
 }
 
 .buttons{
-    display:flex;
+    display: flex;
     justify-content: flex-start;
     color: #aaa;
 }
