--- a/src/src/components/Message/message.css
+++ b/src/src/components/Message/message.css
@@ -46,3 +46,18 @@
 .icon{
     margin-right: 3em;
 }
+
+.num
+{
+    font-size: 10pt;
+    margin-right: 3em;
+    margin-left: 0.25em;
+}
+
+.rtGreen {
+    color: #20883f;
+}
+
+.favYellow {
+    color: #faf800;
+}
