--- a/src/src/components/InputText/input-text.css
+++ b/src/src/components/InputText/input-text.css
@@ -2,7 +2,7 @@
     border-radius: 5px;
     border: 1px solid #ddd;
     width: 90%;
-    heigth: 5em;
+    height: 5em;
     padding: 0.75em;
     margin: 1em 0.5em;
 }
